# src/gen/java/us/filin/helpwanted/api/SellerApi.java
@@ -60,7 +60,7 @@ public class SellerApi  {
    }
 
     @POST
-    @Path("/{username}/projects/")
+    @Path("/projects/")
     @Consumes({ "application/json" })
     @Produces({ "application/json" })
     @io.swagger.annotations.ApiOperation(value = "Crteates a new project description", notes = "", response = Void.class, authorizations = {
@@ -71,14 +71,13 @@ public class SellerApi  {
     }, tags={ "seller", })
     @io.swagger.annotations.ApiResponses(value = { 
         @io.swagger.annotations.ApiResponse(code = 405, message = "Invalid input", response = Void.class) })
-    public Response addSellerProject(@ApiParam(value = "The seller's username",required=true) @PathParam("username") String username
-,@ApiParam(value = "Project description object that needs to be added" ,required=true) ProjectPOJO body
+    public Response addSellerProject(@ApiParam(value = "Project description object that needs to be added" ,required=true) ProjectPOJO body
 ,@Context SecurityContext securityContext)
     throws NotFoundException {
-        return delegate.addSellerProject(username,body,securityContext);
+        return delegate.addSellerProject(body,securityContext);
     }
     @DELETE
-    @Path("/{username}/projects/{projectId}/images/{imageId}")
+    @Path("/projects/{projectId}/images/{imageId}")
     @Consumes({ "multipart/form-data" })
     @Produces({ "application/json" })
     @io.swagger.annotations.ApiOperation(value = "delete an image", notes = "", response = ApiResponsePOJO.class, authorizations = {
@@ -89,8 +88,7 @@ public class SellerApi  {
     }, tags={ "seller", })
     @io.swagger.annotations.ApiResponses(value = { 
         @io.swagger.annotations.ApiResponse(code = 200, message = "successful operation", response = ApiResponsePOJO.class) })
-    public Response deleteProjectImage(@ApiParam(value = "Seller's username",required=true) @PathParam("username") String username
-,@ApiParam(value = "ID of project containg image",required=true) @PathParam("projectId") UUID projectId
+    public Response deleteProjectImage(@ApiParam(value = "ID of project containg image",required=true) @PathParam("projectId") UUID projectId
 ,@ApiParam(value = "image ID",required=true) @PathParam("imageId") String imageId
 ,@ApiParam(value = "Additional data to pass to server")@FormDataParam("additionalMetadata")  String additionalMetadata
 ,
@@ -98,10 +96,10 @@ public class SellerApi  {
             @FormDataParam("file") FormDataContentDisposition fileDetail
 ,@Context SecurityContext securityContext)
     throws NotFoundException {
-        return delegate.deleteProjectImage(username,projectId,imageId,additionalMetadata,fileInputStream, fileDetail,securityContext);
+        return delegate.deleteProjectImage(projectId,imageId,additionalMetadata,fileInputStream, fileDetail,securityContext);
     }
     @DELETE
-    @Path("/{username}/projects/{projectId}")
+    @Path("/projects/{projectId}")
     @Consumes({ "application/json" })
     @Produces({ "application/json" })
     @io.swagger.annotations.ApiOperation(value = "Delete an existing seller's project", notes = "Delete an existing seller's project if project hidden or finished without bids", response = Void.class, authorizations = {
@@ -114,14 +112,13 @@ public class SellerApi  {
         @io.swagger.annotations.ApiResponse(code = 400, message = "Invalid ID supplied", response = Void.class),
         
         @io.swagger.annotations.ApiResponse(code = 404, message = "Project not found", response = Void.class) })
-    public Response deleteSellerProject(@ApiParam(value = "The seller's username",required=true) @PathParam("username") String username
-,@ApiParam(value = "A seller's existing project",required=true) @PathParam("projectId") UUID projectId
+    public Response deleteSellerProject(@ApiParam(value = "A seller's existing project",required=true) @PathParam("projectId") UUID projectId
 ,@Context SecurityContext securityContext)
     throws NotFoundException {
-        return delegate.deleteSellerProject(username,projectId,securityContext);
+        return delegate.deleteSellerProject(projectId,securityContext);
     }
     @GET
-    @Path("/{username}/projects/")
+    @Path("/projects/")
     @Consumes({ "application/json" })
     @Produces({ "application/json" })
     @io.swagger.annotations.ApiOperation(value = "Seller's projects", notes = "", response = Void.class, authorizations = {
@@ -132,13 +129,12 @@ public class SellerApi  {
     }, tags={ "seller", })
     @io.swagger.annotations.ApiResponses(value = { 
         @io.swagger.annotations.ApiResponse(code = 200, message = "TODO", response = Void.class) })
-    public Response getSellerProjects(@ApiParam(value = "The seller's username",required=true) @PathParam("username") String username
-,@Context SecurityContext securityContext)
+    public Response getSellerProjects(@Context SecurityContext securityContext)
     throws NotFoundException {
-        return delegate.getSellerProjects(username,securityContext);
+        return delegate.getSellerProjects(securityContext);
     }
     @PUT
-    @Path("/{username}/projects/{projectId}")
+    @Path("/projects/{projectId}")
     @Consumes({ "application/json" })
     @Produces({ "application/json" })
     @io.swagger.annotations.ApiOperation(value = "Update an existing project description", notes = "", response = Void.class, authorizations = {
@@ -153,15 +149,14 @@ public class SellerApi  {
         @io.swagger.annotations.ApiResponse(code = 404, message = "Project not found", response = Void.class),
         
         @io.swagger.annotations.ApiResponse(code = 405, message = "Validation exception", response = Void.class) })
-    public Response updateSellerProject(@ApiParam(value = "The seller's username",required=true) @PathParam("username") String username
-,@ApiParam(value = "A seller's existing project ",required=true) @PathParam("projectId") UUID projectId
+    public Response updateSellerProject(@ApiParam(value = "A seller's existing project ",required=true) @PathParam("projectId") UUID projectId
 ,@ApiParam(value = "Project description that needs to be updated" ,required=true) ProjectPOJO body
 ,@Context SecurityContext securityContext)
     throws NotFoundException {
-        return delegate.updateSellerProject(username,projectId,body,securityContext);
+        return delegate.updateSellerProject(projectId,body,securityContext);
     }
     @POST
-    @Path("/{username}/projects/{projectId}/images")
+    @Path("/projects/{projectId}/images")
     @Consumes({ "multipart/form-data" })
     @Produces({ "application/json" })
     @io.swagger.annotations.ApiOperation(value = "uploads an image", notes = "", response = ApiResponsePOJO.class, authorizations = {
@@ -172,14 +167,13 @@ public class SellerApi  {
     }, tags={ "seller", })
     @io.swagger.annotations.ApiResponses(value = { 
         @io.swagger.annotations.ApiResponse(code = 200, message = "successful operation", response = ApiResponsePOJO.class) })
-    public Response uploadFile(@ApiParam(value = "Seller's username",required=true) @PathParam("username") String username
-,@ApiParam(value = "ID of project to update",required=true) @PathParam("projectId") UUID projectId
+    public Response uploadFile(@ApiParam(value = "ID of project to update",required=true) @PathParam("projectId") UUID projectId
 ,@ApiParam(value = "Additional data to pass to server")@FormDataParam("additionalMetadata")  String additionalMetadata
 ,
             @FormDataParam("file") InputStream fileInputStream,
             @FormDataParam("file") FormDataContentDisposition fileDetail
 ,@Context SecurityContext securityContext)
     throws NotFoundException {
-        return delegate.uploadFile(username,projectId,additionalMetadata,fileInputStream, fileDetail,securityContext);
+        return delegate.uploadFile(projectId,additionalMetadata,fileInputStream, fileDetail,securityContext);
     }
 }
