# src/gen/java/us/filin/helpwanted/api/SellerApiService.java
@@ -20,10 +20,10 @@ import javax.ws.rs.core.SecurityContext;
 import javax.validation.constraints.*;
 
 public interface SellerApiService extends ApiServiceInContext {
-    public Response addSellerProject(String username,ProjectPOJO body,SecurityContext securityContext) throws NotFoundException;
-    public Response deleteProjectImage(String username,UUID projectId,String imageId,String additionalMetadata,InputStream fileInputStream, FormDataContentDisposition fileDetail,SecurityContext securityContext) throws NotFoundException;
-    public Response deleteSellerProject(String username,UUID projectId,SecurityContext securityContext) throws NotFoundException;
-    public Response getSellerProjects(String username,SecurityContext securityContext) throws NotFoundException;
-    public Response updateSellerProject(String username,UUID projectId,ProjectPOJO body,SecurityContext securityContext) throws NotFoundException;
-    public Response uploadFile(String username,UUID projectId,String additionalMetadata,InputStream fileInputStream, FormDataContentDisposition fileDetail,SecurityContext securityContext) throws NotFoundException;
+    public Response addSellerProject(ProjectPOJO body,SecurityContext securityContext) throws NotFoundException;
+    public Response deleteProjectImage(UUID projectId,String imageId,String additionalMetadata,InputStream fileInputStream, FormDataContentDisposition fileDetail,SecurityContext securityContext) throws NotFoundException;
+    public Response deleteSellerProject(UUID projectId,SecurityContext securityContext) throws NotFoundException;
+    public Response getSellerProjects(SecurityContext securityContext) throws NotFoundException;
+    public Response updateSellerProject(UUID projectId,ProjectPOJO body,SecurityContext securityContext) throws NotFoundException;
+    public Response uploadFile(UUID projectId,String additionalMetadata,InputStream fileInputStream, FormDataContentDisposition fileDetail,SecurityContext securityContext) throws NotFoundException;
 }
